remove deprecated java options. It removed certain compile check in favor of faster building